[package]
name = "rit_gtfsrt"
version = "0.1.0"
edition = "2021"
rust-version = "1.67.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version = "1.12.0", features = ["attributes", "tokio1"]}
bytes = "1.4.0"
chrono = "0.4.23"
chrono-tz = "0.8.1"
csv = "1.2.0"
env_logger = "0.10.0"
gtfs-rt = "0.2.1"
http-cache-reqwest = "0.7.2"
itertools = "0.10.5"
lazy_static = "1.4.0"
prost = "0.8.0"
reqwest = {version = "0.11.14", features = ["json"]}
reqwest-middleware = "0.2.0"
serde = "1.0.152"
snafu = "0.7.4"
tide = "0.16.0"
zip = "0.6.4"
